# ktisma

./: .gitignore  CONTRIBUTING.md  DEPENDENTS.md  README.md  REVIEW_PROMPT.md  ROADMAP.md  environment.yml  ktisma.code-workspace  pyproject.toml
.github/workflows/: ci.yml  publish-noarch.yml
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: architecture.md  build-lifecycle.md  cli-reference.md  conf.py  configuration.md  design-principles.md  editor-integration.md  engine-detection.md  index.md  routing.md
docs/api/: index.md
docs/guide/: getting-started.md  migration.md  project-layout.md  recipes.md
src/ktisma/: __init__.py  __main__.py
src/ktisma/adapters/: bootstrap.py  cli.py  init.py  log.py  vscode.py
src/ktisma/app/: batch.py  build.py  clean.py  configuration.py  doctor.py  inspect.py  protocols.py  variants.py
src/ktisma/domain/: build_dir.py  config.py  context.py  diagnostics.py  engine.py  errors.py  exit_codes.py  routing.py
src/ktisma/infra/: config_loader.py  latexmk.py  locks.py  materialize.py  prerequisites.py  source_reader.py  workspace.py
tests/: conftest.py
tests/test_ktisma/: __init__.py
tests/test_ktisma/test_adapters/: __init__.py  test_cli.py  test_latexmkrc.py  test_log.py  test_vscode.py
tests/test_ktisma/test_app/: __init__.py  test_batch.py  test_build.py  test_clean.py  test_doctor.py  test_variants_flow.py
tests/test_ktisma/test_domain/: __init__.py  test_build_dir.py  test_config.py  test_diagnostics.py  test_engine.py  test_routing.py
tests/test_ktisma/test_infra/: __init__.py  test_config_loader.py  test_locks.py  test_materialize.py  test_source_reader.py  test_workspace.py
(+1 files in other folders)
